--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "material-ui": "^0.20.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-modal": "^3.12.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
   },
